--- a/views/image_result.ejs
+++ b/views/image_result.ejs
@@ -6,6 +6,9 @@
 <body>
     <h1>Uploaded Image</h1>
     <img src="<%= image_src %>" alt="Uploaded Image">
+    <p>
+        Width: <%= width%> Height: <%= height%>
+    </p>
     <h1>Upload Another Image</h1>
     <form method="post" action="./upload" enctype="multipart/form-data">
         <input type="file" name="image" required>
