--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-    <a href="./upload">
+    <a href="./images/upload">
       <button>Upload Image</button>
     </a>
   </body>
